--- a/app/src/main/res/layout/fragment_getprofiledata.xml
+++ b/app/src/main/res/layout/fragment_getprofiledata.xml
@@ -79,7 +79,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView_branch"
+                    android:id="@+id/textView_location_jobDetails"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Branch" />
 
@@ -337,7 +337,7 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView_fbLink"
+                    android:id="@+id/textView_email_jobDetails"
                     android:layout_toRightOf="@+id/imageView_email"
                     android:layout_below="@+id/textView_Contact">
 
@@ -353,9 +353,9 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView_contact"
+                    android:id="@+id/textView_website"
                     android:layout_toRightOf="@+id/imageView_email"
-                    android:layout_below="@+id/textView_fbLink">
+                    android:layout_below="@+id/textView_email_jobDetails">
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
@@ -371,7 +371,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_toRightOf="@+id/imageView_email"
-                    android:layout_below="@+id/textView_contact">
+                    android:layout_below="@+id/textView_website">
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
@@ -393,9 +393,9 @@
                     android:id="@+id/imageView_phone"
                     app:iiv_icon="faw-phone"
                     app:iiv_color="@color/black_de"
-                    android:layout_alignTop="@+id/textView_contact"
-                    android:layout_toLeftOf="@+id/textView_contact"
-                    android:layout_toStartOf="@+id/textView_contact"
+                    android:layout_alignTop="@+id/textView_website"
+                    android:layout_toLeftOf="@+id/textView_website"
+                    android:layout_toStartOf="@+id/textView_website"
                     android:layout_marginTop="20dp" />
                 <com.mikepenz.iconics.view.IconicsImageView
                     android:layout_width="20dp"
@@ -403,7 +403,7 @@
                     android:id="@+id/imageView_email"
                     app:iiv_icon="faw-envelope"
                     app:iiv_color="@color/black_de"
-                    android:layout_alignTop="@+id/textView_fbLink"
+                    android:layout_alignTop="@+id/textView_email_jobDetails"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="20dp" />
@@ -416,7 +416,7 @@
                     app:iiv_color="@color/black_de"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_below="@+id/textView_contact"
+                    android:layout_below="@+id/textView_website"
                     android:layout_marginTop="20dp" />
 
             </RelativeLayout>
