--- a/app/src/main/res/layout/simple_list_item.xml
+++ b/app/src/main/res/layout/simple_list_item.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/textView_name"
+        android:id="@+id/textView_companyName_jobDetails"
 
         android:textColor="@color/cardview_dark_background"
         android:layout_gravity="center_horizontal"
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/textView_designation"
-        android:layout_below="@+id/textView_name"
+        android:layout_below="@+id/textView_companyName_jobDetails"
         android:layout_toRightOf="@+id/briefcase"
         android:layout_toEndOf="@+id/briefcase"
         android:layout_marginLeft="3dp"
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/textView_passing_year"
-        android:layout_alignTop="@+id/textView_name"
+        android:layout_alignTop="@+id/textView_companyName_jobDetails"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginLeft="0dp"
@@ -79,8 +79,8 @@
         android:id="@+id/briefcase"
         android:src="@drawable/work"
         android:layout_above="@+id/icon_location"
-        android:layout_alignLeft="@+id/textView_name"
-        android:layout_alignStart="@+id/textView_name"
+        android:layout_alignLeft="@+id/textView_companyName_jobDetails"
+        android:layout_alignStart="@+id/textView_companyName_jobDetails"
         android:scaleType="fitXY"/>
     <View
         android:layout_width="match_parent"
