--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -1,98 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/finalise_main_screen"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".activities.PostLogin.MainScreen">
-
-    <!--<com.mikepenz.iconics.view.IconicsTextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Arya Alumni"-->
-        <!--android:textColor="@color/card_background"-->
-        <!--android:textSize="40sp"-->
-        <!--android:layout_marginTop="122dp"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_centerHorizontal="true" />-->
-
-    <at.markushi.ui.CircleButton
-        android:id="@+id/member"
-        android:layout_width="70dip"
-        android:layout_height="70dip"
-        android:src="@drawable/prof"
-        app:cb_color="#e53935"
-        app:cb_pressedRingWidth="5dip"
-        android:layout_marginBottom="20dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:id="@+id/member_text"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="Member"
-        android:textColor="#fff"
-        android:textSize="18dp"
-
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <at.markushi.ui.CircleButton
-        android:id="@+id/event"
-        android:layout_width="70dip"
-        android:layout_height="70dip"
-        android:src="@drawable/eventt"
-        app:cb_color="#e53935"
-        app:cb_pressedRingWidth="5dip"
-        android:layout_alignTop="@+id/member"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:id="@+id/event_text"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="About"
-        android:textColor="#fff"
-        android:textSize="18dp"
-        android:layout_marginRight="10dp"
-
-
-        android:layout_alignTop="@+id/info_text"
-        android:layout_alignRight="@+id/about"
-        android:layout_alignEnd="@+id/about" />
-
-
-
-    <at.markushi.ui.CircleButton
-        android:id="@+id/about"
-        android:layout_width="70dip"
-        android:layout_height="70dip"
-        android:src="@drawable/aboutt"
-        app:cb_color="#e53935"
-
-        app:cb_pressedRingWidth="5dip"
-        android:layout_alignTop="@+id/event"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:id="@+id/info_text"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="Events"
-        android:textColor="#fff"
-        android:textSize="18dp"
-
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
-</RelativeLayout>
-
+        android:id="@+id/container_main_screen"/>
+</LinearLayout>
