--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -5,7 +5,7 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/listView_events"></ListView>
+        android:layout_height="wrap_content"
+        android:id="@+id/listView_events"/>
 
 </RelativeLayout>
