--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -41,7 +41,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:textAppearanceMedium"
-                        android:text="Post A Job"
+                        android:text="@string/post_a_job"
                         android:textAlignment="viewStart"
                         style="?android:attr/borderlessButtonStyle"
                         android:clickable="true"
@@ -71,7 +71,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:textAppearanceMedium"
-                        android:text="My Profile"
+                        android:text="@string/my_profile"
                         style="?android:attr/borderlessButtonStyle"
                         android:textAlignment="viewStart"
                         android:id="@+id/button_myprofile"
@@ -88,7 +88,7 @@
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Facebook"
+                        android:text="@string/facebook"
                         android:textAppearance="?android:textAppearanceMedium"
                         style="?android:attr/borderlessButtonStyle"
                         android:id="@+id/button_fbPage"
@@ -104,7 +104,7 @@
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="About Arya Alumni App"
+                        android:text="@string/about_app"
                         android:textAppearance="?android:textAppearanceMedium"
                         style="?android:attr/borderlessButtonStyle"
                         android:id="@+id/button_about_app"
@@ -122,7 +122,7 @@
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="About College"
+                        android:text="@string/about_college"
                         android:id="@+id/button_about_college"
                         android:textAlignment="viewStart"
                         android:textAppearance="?android:textAppearanceMedium"
@@ -139,7 +139,7 @@
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Support Us"
+                        android:text="@string/support_us"
                         android:id="@+id/button_support"
                         android:textAlignment="viewStart"
                         android:textAppearance="?android:textAppearanceMedium"
@@ -157,7 +157,7 @@
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Contact Us"
+                        android:text="@string/contact_us"
                         android:id="@+id/button_contact_us"
                         android:textAlignment="viewStart"
                         android:textAppearance="?android:textAppearanceMedium"
@@ -173,7 +173,7 @@
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="FAQs"
+                        android:text="@string/faqs"
                         android:id="@+id/button_faq"
                         android:textAppearance="?android:textAppearanceMedium"
                         android:textAlignment="viewStart"
@@ -191,7 +191,7 @@
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Rate Us"
+                        android:text="@string/rate_us"
                         android:id="@+id/button_rate_us"
                         android:layout_below="@id/button_faq"
                         android:textAlignment="viewStart"
@@ -318,7 +318,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:textAppearanceMedium"
-                        android:text="Log Out"
+                        android:text="@string/log_out"
                         android:textAlignment="viewStart"
                         style="?android:attr/borderlessButtonStyle"
                         android:clickable="true"
