--- a/app/src/main/res/layout/list_layout_events.xml
+++ b/app/src/main/res/layout/list_layout_events.xml
@@ -1,44 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingLeft="16dp"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp">
+    android:paddingStart="16dp"
+    android:paddingTop="8dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@drawable/tehnika1"
         android:id="@+id/imageView_eventPic_list_layout"
-        android:layout_marginTop="5dp" />
+        android:layout_marginTop="3dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Tehnika Naitus"
         android:id="@+id/list_layout_eventName"
         android:layout_alignBottom="@+id/imageView_eventPic_list_layout"
         android:layout_toRightOf="@+id/imageView_eventPic_list_layout"
         android:layout_toEndOf="@+id/imageView_eventPic_list_layout"
         android:layout_marginLeft="16dp"
-        android:layout_marginBottom="30dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="22dp" />
 
 
 
 
-    <LinearLayout
+
+    <View
         android:layout_width="wrap_content"
-        android:layout_height="2px"
+        android:layout_height="1px"
         android:layout_below="@+id/list_layout_eventName"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
         android:background="@color/grey"
         android:layout_toRightOf="@+id/imageView_eventPic_list_layout"
-        android:layout_toEndOf="@+id/imageView_eventPic_list_layout"></LinearLayout>
+        android:layout_toEndOf="@+id/imageView_eventPic_list_layout"
+        android:layout_marginTop="8dp"
+        android:id="@+id/linearLayout" />
 
 </RelativeLayout>
